# MAPL

./: .clinerules  .codee-format  .editorconfig  .fortitude.toml  .gersemirc  .gitignore  .mlc.toml  .pre-commit-config.yaml  .rgignore  622  AGENTS.md  BUILD.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  COMPREHENSIVE_UNPREFIXED_AUDIT.md  CONTRIBUTING.md  CTestConfig.cmake  CTestCustom.cmake  CTestDashboard.cmake  Externals.cfg  INSTALL.md  MAPL-import.cmake  MAPL_Public_API.md  MAPL_UMBRELLA_AUDIT.md  MAPL_Umbrella_Audit.xlsx  MAPL_v3_restructuring.pptx  PET0.ESMF_LogFile  README.md  UNUSED_ENTITIES_ANALYSIS.md  base_modules.csv  base_modules.xls  build.sh  components.yaml  copy_mapl_netcdf  index.html  mapl-import.cmake.in  mapl_internalconstantsmod.mod  omp_master_reproducer.F90  rename_modules.py  (+8 more)
Apps/: ACG_Config.yaml  CMakeLists.txt  COMP.rc  Comp_Testing_Driver.F90  Comp_Testing_Info.md  ComponentDriver.F90  ComponentTestingDriver.F90  INTERNAL.CONTROL  MAPL_GridCompSpecs_ACG.py  MAPL_GridCompSpecs_ACG_new.py  MAPL_GridCompSpecs_ACG_writer.new.py  MAPL_GridCompSpecs_ACG_writer.py  MAPL_GridCompSpecs_ACGv3.py  MoistGridComp_StateSpecs.rc  OverwriteConfig.F90  OverwriteConfig.md  OverwriteConfig.rc  OverwriteConfig_FullTest.F90  README_ACG_WRITER.md  Regrid_Util.F90  Regrid_Util.md  SanityCheckOverwriteConfig.F90  SimpleOverwriteConfig.F90  Test_MAPL_GridCompSpecs_ACG.py  abi_fixed_coord.F90  combine_restarts.py  generate_scrip_cube.F90  geompack.F90  locstream_test.F90  mapl_acg.cmake  mapl_acg.pl  mathut.F90  split_restart.py  time_ave_util.F90  time_ave_util.F90.no_leakage
Cap/: CMakeLists.txt  MAPL_Cap.F90  SimpleCommSplitter.F90
GMAO_pFIO/: .gitrepo  AbstractCollectiveDataMessage.F90  AbstractDataMessage.F90  AbstractDataReference.F90  AbstractDirectoryService.F90  AbstractMessage.F90  AbstractRequestHandle.F90  AbstractServer.F90  AbstractSocket.F90  AddCollectionMessage.F90  AddExtCollectionMessage.F90  AddHistCollectionMessage.F90  ArrayReference.F90  Attribute.F90  BaseServer.F90  BaseThread.F90  CMakeLists.txt  ClientManager.F90  ClientThread.F90  ClientThreadVector.F90  CollectionIdMessage.F90  CollectivePrefetchDataMessage.F90  CollectivePrefetchDoneMessage.F90  CollectiveRequestDataMessage.F90  CollectiveStageDataMessage.F90  CollectiveStageDoneMessage.F90  CoordinateVariable.F90  DirectoryService.F90  DoneMessage.F90  DownBit.F90  DummyMessage.F90  ExtDataCollection.F90  FileMetadata.F90  GNUmakefile  HandShakeMessage.F90  HistoryCollection.F90  IDMessage.F90  IntegerIntegerMap.F90  IntegerRequestMap.F90  IntegerVector.F90  (+48 more)
GeomIO/: API.F90  CMakeLists.txt  CompressionSettings.F90  DataCollection.F90  DataCollectionManager.F90  DataCollectionVector.F90  FieldBundleRead.F90  FieldBundleWrite.F90  GeomCatagorizer.F90  GeomIO.F90  Geom_PFIO.F90  Grid_PFIO.F90  SharedIO.F90  pFIOServerBounds.F90
GridComps/: CMakeLists.txt  MAPL_ExtData_IOBundleMod.F90  MAPL_HistoryGridComp.F90  MAPL_OrbGridCompMod.F90  MAPL_SimpleBundleMod.F90
GridsRegridding/: CMakeLists.txt  MAPL_AbstractGridSpec.F90  MAPL_AbstractRegridder.F90  MAPL_GridManager.F90
MAPL/: CMakeLists.txt  GEOS.F90  MAPL.F90  mapl3g.F90
MAPL_Base/: .gitrepo  AbstractCommSplitter.F90  ApplicationSupport.F90  CFIOCollection.F90  CMakeLists.txt  CommGroupDescription.F90  ESMFL_Mod.F90  ESMF_CFIOPtrVectorMod.F90  FileMetadataUtilities.F90  GNUmakefile  GetFieldArray.H  GetPointer.H  IOServers.F90  MAPL_AbstractGridFactory.F90  MAPL_AbstractRegridder.F90  MAPL_Base.F90  MAPL_CFIO.F90  MAPL_CFIOServer.F90  MAPL_Cap.F90  MAPL_CapGridComp.F90  MAPL_CapOptions.F90  MAPL_Comms.F90  MAPL_Config.F90  MAPL_Constants.F90  MAPL_CubedSphereGridFactory.F90  MAPL_DirPath.F90  MAPL_ErrLog.h  MAPL_ErrLogMain.h  MAPL_EsmfRegridder.F90  MAPL_EtaHybridVerticalCoordinate.F90  MAPL_Exceptions.h  MAPL_ExtDataCollection.F90  MAPL_ExtDataGridCompMod.F90  MAPL_ExtData_IOBundleMod.F90  MAPL_FlapCapOptions.F90  MAPL_FractionalRegridder.F90  MAPL_Generic.F90  MAPL_Generic.h  MAPL_GenericCplComp.F90  MAPL_GetLatLonCoord.F90  (+83 more)
MAPL_ExceptionHandling/: CMakeLists.txt  MAPL_ErrLog.h  MAPL_ErrLogMain.h  MAPL_ErrorHandling.F90
MAPL_Shared/: CMakeLists.txt  MAPL_ErrorHandling.F90  MAPL_HeapMod.F90  MAPL_Range.F90  MAPL_ShmemMod.F90  MAPL_Throw.F90  hinterp.F
MAPL_cfio/: .gitrepo  CMakeLists.txt  ESMF_CFIOBaseMod.F90  ESMF_CFIOBaseMod.f  ESMF_CFIOEosMod.F90  ESMF_CFIOFileMod.F90  ESMF_CFIOGridMod.F90  ESMF_CFIOMod.F90  ESMF_CFIOSdfMod.F90  ESMF_CFIOUtilMod.F90  ESMF_CFIOVarInfoMod.F90  GNUmakefile_r4r8  ShaveMantissa.c  ShaveMantissa_py.F90  shavemantissa.py  unused_dummy.H  utDownBit.F90
MAPL_pFUnit/: .gitrepo  CMakeLists.txt  ESMF_TestParameter.F90  GNUmakefile  MAPL_pFUnit_Throw.F90
Python/: CMakeLists.txt  DataSpec.py  DataSpecsReader.py  MAPL_GridCompSpecs_ACG.py  MAPL_PythonBridge.F90  MAPL_SpecsCodeGenerator.py  PythonBridge.F90  README.md
Tests/: CMakeLists.txt  CapDriver.F90  ExtDataDriver.F90  ExtDataDriver.md  ExtDataDriverGridComp.F90  ExtDataDriverMod.F90  ExtDataRoot_GridComp.F90  GridCompCreationCap.F90  GridCompCreationDriver.F90  GridCompCreationTester.F90  GridCompCreator.F90  MAPL_demo_fargparse.F90  VarspecDescription.F90  generate_extdatadriver_input.md  generate_extdatadriver_input.py  pfio_MAPL_demo.F90
aeio/: AEIO.F90  CMakeLists.txt  Client.F90  ClientMap.F90  Collection.F90  CollectionDescriptor.F90  CollectionDescriptorMap.F90  CollectionDescriptorVector.F90  CollectionMap.F90  CollectionRegistry.F90  FieldEntry.F90  FieldGroup.F90  FieldGroupEntry.F90  FieldGroupEntryMap.F90  FieldRegistry.F90  Frequency.F90  GridRegistry.F90  Group.F90  GroupRegistry.F90  HistoryConfig.F90  IOController.F90  IOProfiler.F90  MpiConnection.F90  RHConnector.F90  RHConnectorMap.F90  Server.F90  ServerMap.F90  Template.F90  TransferGridComp.F90  Writer.F90  WriterProfiler.F90
alarm/: CMakeLists.txt  SimpleAlarm.F90
base/: API.F90  ApplicationSupport.F90  ArthParser.md  Base.F90  BinIO.F90  CFIOCollection.F90  CMakeLists.txt  EASE_Conv.F90  ESMFL_Mod.F90  ESMF_CFIOVectorMod.F90  Export.F90  Export_base.F90  LDE.F90  (+153 more)
(+41400 files in other folders)
